test/fail/too_large_bin.min
program 
    number x := 0b10000000000000000000000000000000 $$ 2^31
start
end
